<resources>
  <string name="app_name">WordFind6300</string>
  <string name="back">BACK</string>
  <string name="board_size">Board Size:</string>
  <string name="exit">Exit</string>
  <string name="game_statistics">Game Statistics</string>
  <string name="letter_weight">Letter Weight:</string>
  <string name="number_four">4</string>
  <string name="number_one">1</string>
  <string name="number_three">3</string>
  <string name="reset">Reset</string>
  <string name="settings">Settings</string>
  <string name="save">SAVE</string>
  <string name="score_default">Score: 0</string>
  <string name="start_game">Start Game</string>
  <string name="statistics">Statistics</string>
  <string name="submit">Submit</string>
  <string name="time_limit">Time Limit:</string>
  <string name="time_remaining_default">Time Remaining: Unknown</string>
  <string name="word_statistics">Word Statistics</string>
</resources>
