<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".GameActivity">

  <TextView
    android:id="@+id/scoreView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/score_default"
    app:layout_constraintBottom_toTopOf="@+id/remainingTimeView"
    app:layout_constraintStart_toStartOf="@+id/board"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="packed" />

  <TextView
    android:id="@+id/remainingTimeView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/time_remaining_default"
    app:layout_constraintBottom_toTopOf="@+id/board"
    app:layout_constraintStart_toStartOf="@+id/board"
    app:layout_constraintTop_toBottomOf="@+id/scoreView" />

  <androidx.gridlayout.widget.GridLayout
    android:id="@+id/board"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    app:columnCount="3"
    app:layout_constraintBottom_toTopOf="@+id/resetButton"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/remainingTimeView"
    app:orientation="horizontal" />

  <Button
    android:id="@+id/resetButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="onResetBoard"
    android:text="@string/reset"
    app:layout_constraintBottom_toTopOf="@+id/exitButton"
    app:layout_constraintEnd_toStartOf="@+id/submitButton"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/board" />

  <Button
    android:id="@+id/submitButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:enabled="false"
    android:onClick="onSubmit"
    android:text="@string/submit"
    app:layout_constraintBottom_toBottomOf="@+id/resetButton"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/resetButton"
    app:layout_constraintTop_toTopOf="@+id/resetButton" />

  <Button
    android:id="@+id/exitButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="onExit"
    android:text="@string/exit"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/resetButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
